# ShitEngine

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
btools/: README.md
btools/cmake/: add_submodules.cmake  add_thirdparty.cmake  build_xcode.sh  compiler.cmake  gen_binary.cmake  gen_source_tree.cmake  os.cmake
sources/game/: main.cpp
sources/ogl3d/include/ogl3d/window/: OWindow.h
sources/ogl3d/source/ogl3d/window/: OWindow.cpp
